# dvmn_async_lesson5

./: .gitignore  README.md  README_EN.md  common_tools.py  defaults.py  exceptions.py  gui.py  gui_readme.md  helpers.py  history_client.py  main.py  minechat.conf  pyproject.toml  read_client.py  register.py  settings.py  setup.cfg  watchdog.py  write_client.py
tests/: conftest.py  test_args_parsing.py  test_reading_env_vars.py  test_settings.py
