[tool.poetry]
name = "dvmn_async_lesson_5"
version = "0.1.0"
description = "Asyncio-based chat client"
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
async-timeout = "^3.0.1"
anyio = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-randomly = "^3.3.1"
pytest-mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
